@@ -72,7 +72,7 @@
 /* #define	NCPS	32 */	/* Chars. per symbol */
 #define	HUGE	1000		/* A huge number */
 #define NERR	3		/* Errors per line */
-#define NINPUT	128		/* Input buffer size */
+#define NINPUT	1024		/* Input buffer size */
 #define NCODE	128		/* Listing code buffer size */
 #define NTITL	64		/* Title buffer size */
 #define	NSBTL	64		/* SubTitle buffer size */
